--- a/app/src/main/res/layout/fragment_music_play_acitvity.xml
+++ b/app/src/main/res/layout/fragment_music_play_acitvity.xml
@@ -1,69 +1,70 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.spotifystreamer.MusicPlayAcitvityFragment"
-    android:orientation="vertical">
+    tools:context="com.example.android.spotifystreamer.MusicPlayAcitvityFragment">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/artist_name_textview"
-        android:layout_gravity="center_horizontal" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:layout_gravity="center_horizontal"
+        android:text="New Text" />
+
+    <TextView
         android:id="@+id/album_name_textview"
-        android:layout_gravity="center_horizontal" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="New Text" />
 
     <ImageView
+        android:id="@+id/album_thumbnail_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/album_thumbnail_imageview"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/no_artist_image_available" />
 
     <TextView
+        android:id="@+id/track_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/track_name_textview"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:text="New Text" />
 
     <SeekBar
+        android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar"
         android:layout_gravity="center_horizontal" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <ImageButton
+            android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton"
             android:layout_weight="1"
             android:src="@android:drawable/ic_media_previous" />
 
         <ImageButton
+            android:id="@+id/play_pause_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton2"
             android:layout_weight="1"
             android:src="@android:drawable/ic_media_play" />
 
         <ImageButton
+            android:id="@+id/imageButton3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageButton3"
             android:layout_weight="1"
             android:src="@android:drawable/ic_media_next" />
     </LinearLayout>
