--- a/app/src/main/res/layout/fragment_music_play_acitvity.xml
+++ b/app/src/main/res/layout/fragment_music_play_acitvity.xml
@@ -48,7 +48,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/prev_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -62,7 +62,7 @@
             android:src="@android:drawable/ic_media_play" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
