fragment updates after using notification controls

--- a/app/src/main/res/layout/service_music_player_notification.xml
+++ b/app/src/main/res/layout/service_music_player_notification.xml
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@android:drawable/ic_media_pause" />
+                android:src="@android:drawable/ic_media_play" />
 
             <ImageView
                 android:id="@+id/next_imagebutton"
