--- a/app/src/main/res/layout/activity_music_play_acitvity.xml
+++ b/app/src/main/res/layout/activity_music_play_acitvity.xml
@@ -1,5 +1,6 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="com.example.android.spotifystreamer.MusicPlayAcitvityFragment"
-    tools:layout="@layout/fragment_music_play_acitvity" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:name="com.example.android.spotifystreamer.MusicPlayActivityFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout="@layout/fragment_music_play_acitvity" />
